--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -31,7 +31,7 @@ a {
 
 /* Block Title */
 
-.sb-block-title {
+.wp-block-smart-blocks .sb-block-title {
     margin-bottom: 30px;
     font-family: var(--sb-header-typo-family);
     font-weight: var(--sb-header-typo-weight, 700);
@@ -44,22 +44,22 @@ a {
     color: var(--sb-header-color, #000);
 }
 
-.sb-block-title a,
-.sb-block-title span {
+.wp-block-smart-blocks .sb-block-title a,
+.wp-block-smart-blocks .sb-block-title span {
     color: inherit;
 }
 
-.sb-title-style2.sb-block-title {
+.wp-block-smart-blocks .sb-title-style2.sb-block-title {
     border-bottom: 3px solid var(--sb-header-long-border-color, #EEE);
 }
 
-.sb-title-style2.sb-block-title span {
+.wp-block-smart-blocks .sb-title-style2.sb-block-title span {
     position: relative;
     display: inline-block;
     padding-bottom: 10px;
 }
 
-.sb-title-style2.sb-block-title span:before {
+.wp-block-smart-blocks .sb-title-style2.sb-block-title span:before {
     content: "";
     position: absolute;
     height: 3px;
@@ -69,7 +69,7 @@ a {
     background: var(--sb-header-short-border-color, #000);
 }
 
-.sb-title-style3.sb-block-title {
+.wp-block-smart-blocks .sb-title-style3.sb-block-title {
     position: relative;
     display: flex;
     border-left: 10px solid var(--sb-header-short-border-color, #000);
@@ -77,23 +77,23 @@ a {
     line-height: 1;
 }
 
-.sb-title-style3.sb-block-title span {
+.wp-block-smart-blocks .sb-title-style3.sb-block-title span {
     padding: 0 20px 0 15px;
     display: inline-block;
 }
 
-.sb-title-style3.sb-block-title:after {
+.wp-block-smart-blocks .sb-title-style3.sb-block-title:after {
     content: "";
     flex-grow: 1;
     background: var(--sb-header-long-border-color, #EEE);
 }
 
-.sb-title-style4.sb-block-title {
+.wp-block-smart-blocks .sb-title-style4.sb-block-title {
     display: flex;
     align-items: center;
 }
 
-.sb-title-style4.sb-block-title:after {
+.wp-block-smart-blocks .sb-title-style4.sb-block-title:after {
     content: "";
     height: 3px;
     background: var(--sb-header-long-border-color, #EEE);
@@ -158,6 +158,8 @@ a {
     margin: 0;
     padding: 0;
     font-size: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .post-categories li {
@@ -1528,7 +1530,7 @@ h3.sb-big-title {
 }
 
 @media screen and (max-width:768px) {
-    .sb-block-title {
+    .wp-block-smart-blocks .sb-block-title {
         font-size: var(--sb-header-typo-fs-md, var(--sb-header-typo-fs-lg, 20px));
         letter-spacing: var(--sb-header-typo-ls-md, var(--sb-header-typo-ls-lg, 0));
         line-height: var(--sb-header-typo-lh-md, var(--sb-header-typo-lh-lg, 1.3));
@@ -1652,7 +1654,7 @@ h3.sb-big-title {
 }
 
 @media screen and (max-width:580px) {
-    .sb-block-title {
+    .wp-block-smart-blocks .sb-block-title {
         font-size: var(--sb-header-typo-fs-sm, var(--sb-header-typo-fs-md, var(--sb-header-typo-fs-lg, 20px)));
         letter-spacing: var(--sb-header-typo-ls-sm, var(--sb-header-typo-ls-md, var(--sb-header-typo-ls-lg, 0)));
         line-height: var(--sb-header-typo-lh-sm, var(--sb-header-typo-lh-md, var(--sb-header-typo-lh-lg, 1.3)));
