--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -252,14 +252,15 @@ h3.sb-big-title {
     overflow: hidden;
 }
 
-.sb-thumb-container img {
+.sb-post-thumb .sb-thumb-container img {
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center
+    object-position: center;
+    max-width: none;
 }
 
 .sb-post-thumb,
