--- a/inc/assets/css/sb-style.css
+++ b/inc/assets/css/sb-style.css
@@ -235,11 +235,11 @@ a {
 }
 
 h3.sb-large-title {
-    font-size: 26px;
+    font-size: 1.5em;
 }
 
 h3.sb-big-title {
-    font-size: 22px;
+    font-size: 1.3em;
 }
 
 
@@ -408,7 +408,7 @@ h3.sb-big-title {
 .sb-news-module-eight .sb-small-block .sb-post-title,
 .sb-tile-block.style1 .sb-right-col .sb-post-title,
 .sb-tile-block.style2 .sb-right-col .sb-post-title {
-    font-size: var(--sb-side-post-title-typo-fs-lg, 1.2em);
+    font-size: var(--sb-side-post-title-typo-fs-lg, 1.1em);
     letter-spacing: var(--sb-side-post-title-typo-ls-lg, 0);
     line-height: var(--sb-side-post-title-typo-lh-lg, 1.3);
     margin-top: var(--sb-side-post-title-margin-top-lg, 0);
@@ -501,7 +501,7 @@ h3.sb-big-title {
 
 .sb-news-module-four .sb-post-item:nth-child(n+3) .sb-post-title,
 .sb-news-module-six .sb-small-block .sb-post-title {
-    font-size: var(--sb-bottom-post-title-typo-fs-lg, 1.2em);
+    font-size: var(--sb-bottom-post-title-typo-fs-lg, 1.1em);
     letter-spacing: var(--sb-bottom-post-title-typo-ls-lg, 0);
     line-height: var(--sb-bottom-post-title-typo-lh-lg, 1.3);
     margin-top: var(--sb-bottom-post-title-margin-top-lg, 0);
@@ -544,7 +544,7 @@ h3.sb-big-title {
 .sb-carousel-block .sb-post-content h3.sb-post-title,
 .sb-single-post-one .sb-post-content h3.sb-post-title,
 .sb-single-post-two .sb-post-content h3.sb-post-title {
-    font-size: var(--sb-listing-post-title-typo-fs-lg, 1.2em);
+    font-size: var(--sb-listing-post-title-typo-fs-lg, 1.1em);
     letter-spacing: var(--sb-listing-post-title-typo-ls-lg, 0);
     line-height: var(--sb-listing-post-title-typo-lh-lg, 1.3);
     margin-top: var(--sb-listing-post-title-margin-top-lg, 0);
@@ -1663,7 +1663,7 @@ h3.sb-big-title {
     font-style: var(--sb-ticker-title-typo-style, normal);
     text-transform: var(--sb-ticker-title-typo-tt, none);
     text-decoration: var(--sb-ticker-title-typo-td, none);
-    font-size: var(--sb-ticker-title-typo-fs-lg, 20px);
+    font-size: var(--sb-ticker-title-typo-fs-lg, 1.1em);
     letter-spacing: var(--sb-ticker-title-typo-ls-lg, 0);
     line-height: var(--sb-ticker-title-typo-lh-lg, 2);
     clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
@@ -1687,7 +1687,7 @@ h3.sb-big-title {
     font-style: var(--sb-ticker-content-typo-style, normal);
     text-transform: var(--sb-ticker-content-typo-tt, none);
     text-decoration: var(--sb-ticker-content-typo-td, none);
-    font-size: var(--sb-ticker-content-typo-fs-lg, 20px);
+    font-size: var(--sb-ticker-content-typo-fs-lg, 1.1em);
     letter-spacing: var(--sb-ticker-content-typo-ls-lg, 0);
     line-height: var(--sb-ticker-content-typo-lh-lg, 1.3);
 }
@@ -1729,7 +1729,7 @@ h3.sb-big-title {
     font-style: normal;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .wp-block-smart-blocks .sb-block-title {
         font-size: var(--sb-header-typo-fs-md, var(--sb-header-typo-fs-lg, 20px));
         letter-spacing: var(--sb-header-typo-ls-md, var(--sb-header-typo-ls-lg, 0));
@@ -1751,7 +1751,7 @@ h3.sb-big-title {
     .sb-news-module-nine .sb-big-post-item .sb-post-title,
     .sb-tile-block.style1 .sb-left-col .sb-post-title,
     .sb-tile-block.style2 .sb-left-col .sb-post-title {
-        font-size: var(--sb-featured-title-typo-fs-md, var(--sb-featured-title-typo-fs-lg, 26px));
+        font-size: var(--sb-featured-title-typo-fs-md, var(--sb-featured-title-typo-fs-lg, 1.5em));
         letter-spacing: var(--sb-featured-title-typo-ls-md, var(--sb-featured-title-typo-ls-lg, 0));
         line-height: var(--sb-featured-title-typo-lh-md, var(--sb-featured-title-typo-lh-lg, 1.3));
         margin-top: var(--sb-featured-title-margin-top-md, var(--sb-featured-title-margin-top-lg, 0));
@@ -1768,7 +1768,7 @@ h3.sb-big-title {
     .sb-news-module-eight .sb-small-block .sb-post-title,
     .sb-tile-block.style1 .sb-right-col .sb-post-title,
     .sb-tile-block.style2 .sb-right-col .sb-post-title {
-        font-size: var(--sb-side-post-title-typo-fs-md, var(--sb-side-post-title-typo-fs-lg, 20px));
+        font-size: var(--sb-side-post-title-typo-fs-md, var(--sb-side-post-title-typo-fs-lg, 1.1em));
         letter-spacing: var(--sb-side-post-title-typo-ls-md, var(--sb-side-post-title-typo-ls-lg, 0));
         line-height: var(--sb-side-post-title-typo-lh-md, var(--sb-side-post-title-typo-lh-lg, 1.3));
         margin-top: var(--sb-side-post-title-margin-top-md, var(--sb-side-post-title-margin-top-lg, 0));
@@ -1780,7 +1780,7 @@ h3.sb-big-title {
     .sb-news-module-four .sb-post-item:nth-child(1) .sb-post-title,
     .sb-news-module-four .sb-post-item:nth-child(2) .sb-post-title,
     .sb-news-module-six .sb-big-block .sb-post-title {
-        font-size: var(--sb-top-post-title-typo-fs-md, var(--sb-top-post-title-typo-fs-lg, 26px));
+        font-size: var(--sb-top-post-title-typo-fs-md, var(--sb-top-post-title-typo-fs-lg, 1.5em));
         letter-spacing: var(--sb-top-post-title-typo-ls-md, var(--sb-top-post-title-typo-ls-lg, 0));
         line-height: var(--sb-top-post-title-typo-lh-md, var(--sb-top-post-title-typo-lh-lg, 1.3));
         margin-top: var(--sb-top-post-title-margin-top-md, var(--sb-top-post-title-margin-top-lg, 0));
@@ -1791,7 +1791,7 @@ h3.sb-big-title {
 
     .sb-news-module-four .sb-post-item:nth-child(n+3) .sb-post-title,
     .sb-news-module-six .sb-small-block .sb-post-title {
-        font-size: var(--sb-bottom-post-title-typo-fs-md, var(--sb-bottom-post-title-typo-fs-lg, 20px));
+        font-size: var(--sb-bottom-post-title-typo-fs-md, var(--sb-bottom-post-title-typo-fs-lg, 1.1em));
         letter-spacing: var(--sb-bottom-post-title-typo-ls-md, var(--sb-bottom-post-title-typo-ls-lg, 0));
         line-height: var(--sb-bottom-post-title-typo-lh-md, var(--sb-bottom-post-title-typo-lh-lg, 1.3));
         margin-top: var(--sb-bottom-post-title-margin-top-md, var(--sb-bottom-post-title-margin-top-lg, 0));
@@ -1813,7 +1813,7 @@ h3.sb-big-title {
     .sb-carousel-block .sb-post-content h3.sb-post-title,
     .sb-single-post-one .sb-post-content h3.sb-post-title,
     .sb-single-post-two .sb-post-content h3.sb-post-title {
-        font-size: var(--sb-listing-post-title-typo-fs-md, var(--sb-listing-post-title-typo-fs-lg, 20px));
+        font-size: var(--sb-listing-post-title-typo-fs-md, var(--sb-listing-post-title-typo-fs-lg, 1.1em));
         letter-spacing: var(--sb-listing-post-title-typo-ls-md, var(--sb-listing-post-title-typo-ls-lg, 0));
         line-height: var(--sb-listing-post-title-typo-lh-md, var(--sb-listing-post-title-typo-lh-lg, 1.3));
         margin-top: var(--sb-listing-post-title-margin-top-md, var(--sb-listing-post-title-margin-top-lg, 0));
@@ -1823,7 +1823,7 @@ h3.sb-big-title {
     }
 
     .sb-excerpt {
-        font-size: var(--sb-excerpt-typo-fs-md, var(--sb-excerpt-typo-fs-lg, 16px));
+        font-size: var(--sb-excerpt-typo-fs-md, var(--sb-excerpt-typo-fs-lg, 1em));
         letter-spacing: var(--sb-excerpt-typo-ls-md, var(--sb-excerpt-typo-ls-lg, 0));
         line-height: var(--sb-excerpt-typo-lh-md, var(--sb-excerpt-typo-lh-lg, 1.3));
     }
@@ -1865,7 +1865,7 @@ h3.sb-big-title {
     }
 }
 
-@media screen and (max-width:580px) {
+@media screen and (max-width:767) {
     .wp-block-smart-blocks .sb-block-title {
         font-size: var(--sb-header-typo-fs-sm, var(--sb-header-typo-fs-md, var(--sb-header-typo-fs-lg, 20px)));
         letter-spacing: var(--sb-header-typo-ls-sm, var(--sb-header-typo-ls-md, var(--sb-header-typo-ls-lg, 0)));
@@ -1887,7 +1887,7 @@ h3.sb-big-title {
     .sb-news-module-nine .sb-big-post-item .sb-post-title,
     .sb-tile-block.style1 .sb-left-col .sb-post-title,
     .sb-tile-block.style2 .sb-left-col .sb-post-title {
-        font-size: var(--sb-featured-title-typo-fs-sm, var(--sb-featured-title-typo-fs-md, var(--sb-featured-title-typo-fs-lg, 26px)));
+        font-size: var(--sb-featured-title-typo-fs-sm, var(--sb-featured-title-typo-fs-md, var(--sb-featured-title-typo-fs-lg, 1.5em)));
         letter-spacing: var(--sb-featured-title-typo-ls-sm, var(--sb-featured-title-typo-ls-md, var(--sb-featured-title-typo-ls-lg, 0)));
         line-height: var(--sb-featured-title-typo-lh-sm, var(--sb-featured-title-typo-lh-md, var(--sb-featured-title-typo-lh-lg, 1.3)));
         margin-top: var(--sb-featured-title-margin-top-sm, var(--sb-featured-title-margin-top-md, var(--sb-featured-title-margin-top-lg, 0)));
@@ -1904,7 +1904,7 @@ h3.sb-big-title {
     .sb-news-module-eight .sb-small-block .sb-post-title,
     .sb-tile-block.style1 .sb-right-col .sb-post-title,
     .sb-tile-block.style2 .sb-right-col .sb-post-title {
-        font-size: var(--sb-side-post-title-typo-fs-sm, var(--sb-side-post-title-typo-fs-md, var(--sb-side-post-title-typo-fs-lg, 26px)));
+        font-size: var(--sb-side-post-title-typo-fs-sm, var(--sb-side-post-title-typo-fs-md, var(--sb-side-post-title-typo-fs-lg, 1.1em)));
         letter-spacing: var(--sb-side-post-title-typo-ls-sm, var(--sb-side-post-title-typo-ls-md, var(--sb-side-post-title-typo-ls-lg, 0)));
         line-height: var(--sb-side-post-title-typo-lh-sm, var(--sb-side-post-title-typo-lh-md, var(--sb-side-post-title-typo-lh-lg, 1.3)));
         margin-top: var(--sb-side-post-title-margin-top-sm, var(--sb-side-post-title-margin-top-md, var(--sb-side-post-title-margin-top-lg, 0)));
@@ -1916,7 +1916,7 @@ h3.sb-big-title {
     .sb-news-module-four .sb-post-item:nth-child(1) .sb-post-title,
     .sb-news-module-four .sb-post-item:nth-child(2) .sb-post-title,
     .sb-news-module-six .sb-big-block .sb-post-title {
-        font-size: var(--sb-top-post-title-typo-fs-sm, var(--sb-top-post-title-typo-fs-md, var(--sb-top-post-title-typo-fs-lg, 26px)));
+        font-size: var(--sb-top-post-title-typo-fs-sm, var(--sb-top-post-title-typo-fs-md, var(--sb-top-post-title-typo-fs-lg, 1.5em)));
         letter-spacing: var(--sb-top-post-title-typo-ls-sm, var(--sb-top-post-title-typo-ls-md, var(--sb-top-post-title-typo-ls-lg, 0)));
         line-height: var(--sb-top-post-title-typo-lh-sm, var(--sb-top-post-title-typo-lh-md, var(--sb-top-post-title-typo-lh-lg, 1.3)));
         margin-top: var(--sb-top-post-title-margin-top-sm, var(--sb-top-post-title-margin-top-md, var(--sb-top-post-title-margin-top-lg, 0)));
@@ -1927,7 +1927,7 @@ h3.sb-big-title {
 
     .sb-news-module-four .sb-post-item:nth-child(n+3) .sb-post-title,
     .sb-news-module-six .sb-small-block .sb-post-title {
-        font-size: var(--sb-bottom-post-title-typo-fs-sm, var(--sb-bottom-post-title-typo-fs-md, var(--sb-bottom-post-title-typo-fs-lg, 26px)));
+        font-size: var(--sb-bottom-post-title-typo-fs-sm, var(--sb-bottom-post-title-typo-fs-md, var(--sb-bottom-post-title-typo-fs-lg, 1.1em)));
         letter-spacing: var(--sb-bottom-post-title-typo-ls-sm, var(--sb-bottom-post-title-typo-ls-md, var(--sb-bottom-post-title-typo-ls-lg, 0)));
         line-height: var(--sb-bottom-post-title-typo-lh-sm, var(--sb-bottom-post-title-typo-lh-md, var(--sb-bottom-post-title-typo-lh-lg, 1.3)));
         margin-top: var(--sb-bottom-post-title-margin-top-sm, var(--sb-bottom-post-title-margin-top-md, var(--sb-bottom-post-title-margin-top-lg, 0)));
@@ -1949,7 +1949,7 @@ h3.sb-big-title {
     .sb-carousel-block .sb-post-content .sb-post-title,
     .sb-single-post-one .sb-post-content .sb-post-title,
     .sb-single-post-two .sb-post-content .sb-post-title {
-        font-size: var(--sb-listing-post-title-typo-fs-sm, var(--sb-listing-post-title-typo-fs-md, var(--sb-listing-post-title-typo-fs-lg, 26px)));
+        font-size: var(--sb-listing-post-title-typo-fs-sm, var(--sb-listing-post-title-typo-fs-md, var(--sb-listing-post-title-typo-fs-lg, 1.1em)));
         letter-spacing: var(--sb-listing-post-title-typo-ls-sm, var(--sb-listing-post-title-typo-ls-md, var(--sb-listing-post-title-typo-ls-lg, 0)));
         line-height: var(--sb-listing-post-title-typo-lh-sm, var(--sb-listing-post-title-typo-lh-md, var(--sb-listing-post-title-typo-lh-lg, 1.3)));
         margin-top: var(--sb-listing-post-title-margin-top-sm, var(--sb-listing-post-title-margin-top-md, var(--sb-listing-post-title-margin-top-lg, 0)));
@@ -1959,13 +1959,13 @@ h3.sb-big-title {
     }
 
     .sb-excerpt {
-        font-size: var(--sb-excerpt-typo-fs-sm, var(--sb-excerpt-typo-fs-md, var(--sb-excerpt-typo-fs-lg, 16px)));
+        font-size: var(--sb-excerpt-typo-fs-sm, var(--sb-excerpt-typo-fs-md, var(--sb-excerpt-typo-fs-lg, 1em)));
         letter-spacing: var(--sb-excerpt-typo-ls-sm, var(--sb-excerpt-typo-ls-md, var(--sb-excerpt-typo-ls-lg, 0)));
         line-height: var(--sb-excerpt-typo-lh-sm, var(--sb-excerpt-typo-lh-md, var(--sb-excerpt-typo-lh-lg, 1.3)));
     }
 
     .sb-post-meta>span {
-        font-size: var(--sb-post-metas-typo-fs-sm, var(--sb-post-metas-typo-fs-md, var(--sb-post-metas-typo-fs-lg, 16px)));
+        font-size: var(--sb-post-metas-typo-fs-sm, var(--sb-post-metas-typo-fs-md, var(--sb-post-metas-typo-fs-lg, 12px)));
         letter-spacing: var(--sb-post-metas-typo-ls-sm, var(--sb-post-metas-typo-ls-md, var(--sb-post-metas-typo-ls-lg, 0)));
         line-height: var(--sb-post-metas-typo-lh-sm, var(--sb-post-metas-typo-lh-md, var(--sb-post-metas-typo-lh-lg, 1.3)));
     }
@@ -2001,7 +2001,7 @@ h3.sb-big-title {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 
     .sb-news-module-one .sb-news-module-one-wrap,
     .sb-news-module-two .sb-news-module-two-wrap,
@@ -2119,9 +2119,6 @@ h3.sb-big-title {
         height: 100%;
         object-fit: cover;
     }
-}
-
-@media screen and (max-width: 580px) {
 
     .sb-news-module-one .sb-news-module-one-wrap,
     .sb-news-module-two .sb-news-module-two-wrap,
@@ -2265,6 +2262,7 @@ h3.sb-big-title {
 
     .sb-ticker {
         max-height: none;
+        display: block;
     }
 
     .sb-ticker-title {
@@ -2272,7 +2270,8 @@ h3.sb-big-title {
         display: block;
         margin-right: 0;
         text-align: center;
-        margin-bottom: 5px;
+        margin-bottom: 10px;
+        clip-path: none;
     }
 
     .sb-ticker-title:after {
